Fixed scroll spacing

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,11 +1,15 @@
 .console-container {
   min-width: 420px;
   max-width: 420px;
+  height: 100vh;
   max-height: 100vh;
 }
 
 .main-container {
   max-width: 100vw;
+  max-height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .btn {
